quick-fix: changed error text alignment to left on the modal to match the design

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ input { padding: 8px; border: 0.8px solid #ccc; outline: none; }
 
 .outline-error { outline: 2px solid #e54858; }
 
-.formData[data-error]::after { content: attr(data-error); font-size: 0.4em; color: #e54858; display: block; margin-top: 7px; margin-bottom: 7px; text-align: right; line-height: 0.3; opacity: 0; transition: 0.3s; }
+.formData[data-error]::after { content: attr(data-error); font-size: 0.4em; color: #e54858; display: block; margin-top: 7px; margin-bottom: 7px; text-align: left; line-height: 0.3; opacity: 0; transition: 0.3s; }
 
 .formData[data-error-visible="true"]::after { opacity: 1; }
 
@@ -282,3 +282,5 @@ input { padding: 8px; border: 0.8px solid #ccc; outline: none; }
 .confirmation { height: 800px; display: none; flex-direction: column; justify-content: space-between; animation-name: confirmation-open; animation-duration: 1s; }
 
 .confirmation p { text-align: center; font-size: xx-large; }
+
+@media only screen and (max-width: 819px) { .confirmation { height: 500px; } }
