--- a/sass/05_layout/_confirmation.scss
+++ b/sass/05_layout/_confirmation.scss
@@ -11,3 +11,9 @@
     font-size: xx-large;
   }
 }
+
+@media only screen and (max-width: $breakpoint-mobile) {
+  .confirmation {
+    height: 500px;
+  }
+}
